[gd_scene load_steps=6 format=2]

[ext_resource path="res://Src/Objects/Note.gd" type="Script" id=1]
[ext_resource path="res://Assets/Objects/Note.png" type="Texture" id=2]
[ext_resource path="res://Src/Notifier/Notifier.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 17 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 27, 17 )

[node name="Note" type="Node2D"]
script = ExtResource( 1 )
translationCSVPath = "res://Translations/NoteTranslations/NoteTranslations.csv"

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -18 )
texture = ExtResource( 2 )
hframes = 2
frame = 1

[node name="Notifier" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, -26 )

[node name="ReadArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ReadArea"]
position = Vector2( 0, -17 )
shape = SubResource( 1 )

[node name="NotifierArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="NotifierArea"]
position = Vector2( 0, -17 )
shape = SubResource( 2 )
[connection signal="body_entered" from="ReadArea" to="." method="_on_ReadArea_body_entered"]
[connection signal="body_exited" from="ReadArea" to="." method="_on_ReadArea_body_exited"]
[connection signal="body_entered" from="NotifierArea" to="." method="_on_NotifierArea_body_entered"]
[connection signal="body_exited" from="NotifierArea" to="." method="_on_NotifierArea_body_exited"]
